MDT module added, currents module init.
Signed-off-by: ShivamPR21 <pandeyshivam2017robotics@gmail.com>

--- a/test/notebooks/goceanIO.ipynb
+++ b/test/notebooks/goceanIO.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -423,11 +423,23 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Import mdt from gocean.currents module"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "outputs": [],
    "source": [
-    "mdt = jason.grid_filled - geoid.grid[:, :, 2]"
+    "from gocean.currents.mdt import mdt"
    ],
    "metadata": {
     "collapsed": false,
@@ -438,7 +450,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "mdt_grid = mdt(geoid.grid[:, :, 2], jason.grid_filled)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
@@ -452,10 +478,10 @@
     }
    ],
    "source": [
-    "plt.imshow(mdt, extent=[geoid.header['long_min'],\n",
-    "                        geoid.header['long_max'],\n",
-    "                        geoid.header['lat_min'],\n",
-    "                        geoid.header['lat_max']])\n",
+    "plt.imshow(mdt_grid, extent=[geoid.header['long_min'],\n",
+    "                             geoid.header['long_max'],\n",
+    "                             geoid.header['lat_min'],\n",
+    "                             geoid.header['lat_max']])\n",
     "plt.xlabel('longitude')\n",
     "plt.ylabel('latitude')\n",
     "plt.title('MDT')\n",
@@ -474,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [],
    "source": [],
    "metadata": {
