--- a/test/notebooks/goceanIO.ipynb
+++ b/test/notebooks/goceanIO.ipynb
@@ -199,14 +199,17 @@
     }
    ],
    "source": [
+    "# Plot the geoid grid\n",
     "plt.imshow(geoid.grid[:, :, 2], extent=[geoid.header['long_min'],\n",
     "                                        geoid.header['long_max'],\n",
     "                                        geoid.header['lat_min'],\n",
     "                                        geoid.header['lat_max']])\n",
+    "# create the axis labels and metadat\n",
     "plt.xlabel('longitude')\n",
     "plt.ylabel('latitude')\n",
     "plt.title('Geoid height above Ellipsoid(WGS84)')\n",
     "\n",
+    "# Create colorbar and save the figure\n",
     "plt.colorbar()\n",
     "plt.savefig('geoid.png')\n",
     "plt.show()"
@@ -261,6 +264,7 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
+    "# Create jason parsing utility\n",
     "jason = SSHIO('../../data/altimetry')"
    ],
    "metadata": {
@@ -287,6 +291,7 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
+    "# Load the data and fill the grid\n",
     "jason.read(geoid.grid, sigma=1.8)"
    ],
    "metadata": {
@@ -324,17 +329,19 @@
     }
    ],
    "source": [
+    "# plot the altimetry data points with temporal mean\n",
     "plt.imshow(jason.grid[:, :, 1], extent=[geoid.header['long_min'],\n",
     "                                        geoid.header['long_max'],\n",
     "                                        geoid.header['lat_min'],\n",
     "                                        geoid.header['lat_max']])\n",
     "\n",
+    "# create axis label\n",
     "plt.xlabel('longitude')\n",
     "plt.ylabel('latitude')\n",
     "plt.title('SSH Time variant mean (Geoid Grid)')\n",
     "\n",
     "plt.colorbar()\n",
-    "\n",
+    "# save the figure\n",
     "plt.savefig('ssh-tvm.png')\n",
     "plt.show()"
    ],
@@ -361,17 +368,19 @@
     }
    ],
    "source": [
+    "# plot the interpolated data grid\n",
     "plt.imshow(jason.grid_filled[:, :], extent=[geoid.header['long_min'],\n",
     "                                        geoid.header['long_max'],\n",
     "                                        geoid.header['lat_min'],\n",
     "                                        geoid.header['lat_max']])\n",
     "\n",
+    "# Create the label\n",
     "plt.xlabel('longitude')\n",
     "plt.ylabel('latitude')\n",
     "plt.title('SSH data on similar grid as Geoid is there')\n",
     "\n",
     "plt.colorbar()\n",
-    "\n",
+    "# save the figure\n",
     "plt.savefig('ssh.png')\n",
     "plt.show()"
    ],
@@ -398,22 +407,26 @@
     }
    ],
    "source": [
+    "# Create the contour graph for geoid\n",
     "plt.contour(geoid.grid[:, :, 1], geoid.grid[:, :, 0],\n",
     "            geoid.grid[:, :, 2], extent=[geoid.header['long_min'],\n",
     "                                        geoid.header['long_max'],\n",
     "                                        geoid.header['lat_min'],\n",
     "                                        geoid.header['lat_max']], levels=20)\n",
+    "\n",
+    "# Create the altimetry grid\n",
     "plt.imshow(jason.grid_filled[:, :], extent=[geoid.header['long_min'],\n",
     "                                        geoid.header['long_max'],\n",
     "                                        geoid.header['lat_min'],\n",
     "                                        geoid.header['lat_max']])\n",
     "\n",
+    "# Create the label\n",
     "plt.xlabel('longitude')\n",
     "plt.ylabel('latitude')\n",
     "plt.title('SSH data over Geoid')\n",
     "\n",
     "plt.colorbar()\n",
-    "\n",
+    "# Save the figure\n",
     "plt.savefig('ssh-geoid.png')\n",
     "plt.show()\n"
    ],
@@ -455,6 +468,7 @@
    "execution_count": 14,
    "outputs": [],
    "source": [
+    "# get the mdt\n",
     "mdt_grid = mdt(geoid.grid[:, :, 2], jason.grid_filled)"
    ],
    "metadata": {
@@ -488,20 +502,23 @@
     }
    ],
    "source": [
+    "# Show mdt grid\n",
     "plt.imshow(mdt_grid, extent=[geoid.header['long_min'],\n",
     "                             geoid.header['long_max'],\n",
     "                             geoid.header['lat_min'],\n",
     "                             geoid.header['lat_max']])\n",
+    "# Create the label\n",
     "plt.xlabel('longitude')\n",
     "plt.ylabel('latitude')\n",
     "plt.title('MDT')\n",
     "\n",
     "plt.colorbar()\n",
-    "\n",
+    "# Save the figure\n",
     "plt.savefig('mdt.png')\n",
     "plt.show()\n",
     "\n",
     "# jason.mask[np.where(mdt_grid<-2)] = True\n",
+    "# Threshold out the mdt\n",
     "mdt_grid[np.where(mdt_grid<-2)] = -2"
    ],
    "metadata": {
@@ -592,6 +609,7 @@
    "execution_count": 19,
    "outputs": [],
    "source": [
+    "# prepare for filtering\n",
     "mdt_final = copy.copy(mdt_grid)\n",
     "mdt_final[jason.mask] = 0"
    ],
@@ -607,6 +625,7 @@
    "execution_count": 20,
    "outputs": [],
    "source": [
+    "# filter out the mdt for denoising & delining\n",
     "mdt_filtered = gaussian(mdt_final, jason.mask, 1)"
    ],
    "metadata": {
@@ -632,6 +651,7 @@
     }
    ],
    "source": [
+    "# Plot the filtered data\n",
     "plt.imshow(mdt_filtered, extent=[geoid.header['long_min'],\n",
     "                             geoid.header['long_max'],\n",
     "                             geoid.header['lat_min'],\n",
@@ -641,7 +661,7 @@
     "plt.title('MDT filtered')\n",
     "\n",
     "plt.colorbar()\n",
-    "\n",
+    "# save the figure\n",
     "plt.savefig('mdt-filtered.png')\n",
     "plt.show()\n"
    ],
@@ -649,6 +669,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Now decompose the current components"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -671,6 +703,7 @@
    "execution_count": 23,
    "outputs": [],
    "source": [
+    "# Decompose the current components\n",
     "u, v = decompose(mdt_final, geoid.grid[:, :, :2])"
    ],
    "metadata": {
@@ -712,6 +745,7 @@
     "mag = np.sqrt(u**2+v**2)\n",
     "mag[np.where(mag < 1e-7)] = 1e-7\n",
     "\n",
+    "# Get the unit vector\n",
     "u = u/mag\n",
     "v = v/mag\n",
     "\n",
@@ -766,6 +800,7 @@
    "execution_count": 26,
    "outputs": [],
    "source": [
+    "# Crop down access area\n",
     "rows, cols = np.where(jason.mask == False)\n",
     "\n",
     "n_ggrid = n_ggrid[rows.min():rows.max(), cols.min():cols.max(), :]\n",
@@ -797,21 +832,27 @@
     }
    ],
    "source": [
+    "# get down the land area\n",
     "n_u[n_mask] = np.nan\n",
     "n_v[n_mask] = np.nan\n",
     "n_mag[n_mask] = np.nan\n",
     "\n",
+    "# get the size of graph\n",
     "w = 20\n",
     "h = 20\n",
     "fig = plt.figure(figsize=(w, h))\n",
     "\n",
+    "# sampling stride\n",
     "ss = 2\n",
+    "\n",
+    "# show the magnitude as background figure\n",
     "plt.imshow(n_mag,\n",
     "           extent=[n_ggrid[:, :, 1].min(),\n",
     "                   n_ggrid[:, :, 1].max(),\n",
     "                   n_ggrid[:, :, 0].min(),\n",
     "                   n_ggrid[:, :, 0].max()], alpha=0.6)\n",
     "\n",
+    "# Show the direction\n",
     "plt.quiver(n_ggrid[::ss, ::ss, 1],\n",
     "           n_ggrid[::ss, ::ss, 0],\n",
     "           n_v[::ss, ::ss],\n",
@@ -819,12 +860,14 @@
     "           n_mag[::ss, ::ss],\n",
     "           scale=4, angles='xy', scale_units='xy')\n",
     "\n",
+    "# Graph metadata\n",
     "plt.colorbar(orientation=\"horizontal\")\n",
     "\n",
     "plt.xlabel('longitude')\n",
     "plt.ylabel('latitude')\n",
     "plt.title('Ocean Currents')\n",
     "\n",
+    "# save figure\n",
     "plt.savefig('currents-overall.png')\n",
     "plt.show()"
    ],
@@ -867,18 +910,22 @@
     "# n_u[n_mask] = np.nan\n",
     "# n_v[n_mask] = np.nan\n",
     "\n",
+    "# get the size of graph\n",
     "w = 20\n",
     "h = 20\n",
     "fig = plt.figure(figsize=(w, h))\n",
     "\n",
+    "# sampling rate\n",
     "ss = 1\n",
-    "# [10:30, 10:30]\n",
+    "\n",
+    "# show the magnitude as background figure\n",
     "plt.imshow(n_mag,\n",
     "           extent=[n_ggrid[:, :, 1].min(),\n",
     "                   n_ggrid[:, :, 1].max(),\n",
     "                   n_ggrid[:, :, 0].min(),\n",
     "                   n_ggrid[:, :, 0].max()], alpha=0.6)\n",
     "\n",
+    "# Get the vectors\n",
     "plt.quiver(n_ggrid[::ss, ::ss, 1],\n",
     "           n_ggrid[::ss, ::ss, 0],\n",
     "           n_v[::ss, ::ss],\n",
@@ -890,7 +937,7 @@
     "plt.xlabel('longitude')\n",
     "plt.ylabel('latitude')\n",
     "plt.title('Ocean Currents')\n",
-    "\n",
+    "# save the graph figure\n",
     "plt.savefig('currents-overall1.png')\n",
     "plt.show()"
    ],
@@ -918,6 +965,7 @@
    "execution_count": 29,
    "outputs": [],
    "source": [
+    "# Save the graph as zoomed figure\n",
     "for row in range(0, n_ggrid.shape[0], 50):\n",
     "    for col in range(0, n_ggrid.shape[1], 50):\n",
     "        n_ggrid_crop = np.copy(n_ggrid)\n",
@@ -940,7 +988,7 @@
     "        fig = plt.figure(figsize=(w,h))\n",
     "\n",
     "        ss = 1\n",
-    "        # [10:30, 10:30]\n",
+    "\n",
     "        plt.imshow(n_mag_crop,\n",
     "                   extent=[n_ggrid_crop[:, :, 1].min(),\n",
     "                         n_ggrid_crop[:, :, 1].max(),\n",
@@ -971,6 +1019,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Apply k-means clustering"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "outputs": [],
@@ -993,8 +1053,7 @@
     "curr = np.zeros([geoid.grid.shape[0], geoid.grid.shape[1], 3])\n",
     "curr[:, :, 0] = mag\n",
     "curr[:, :, 1] = v\n",
-    "curr[:, :, 2] = u\n",
-    "# curr[:, :, 3:] = geoid.grid[:, :, :2]"
+    "curr[:, :, 2] = u"
    ],
    "metadata": {
     "collapsed": false,
